<resources>
    <string name="app_name">Alquileres UES</string>
    <string name="home_dashboard">Dashboard</string>
    <string name="txtView_Clientes">CLIENTES</string>
    <string name="txtView_AutosAlq">AUTOS ALQUILADOS</string>
    <string name="txtView_Autos">AUTOS REGISTRADOS</string>
    <string name="txtAccesos">Accesos rápidos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>